--- a/bench/templates/complex.handlebars
+++ b/bench/templates/complex.handlebars
@@ -1,14 +1,14 @@
-<h1>{{header}}</h1>
-{{#if items}}
+<h1><{{header}}></h1>
+<{{#if items}}>
   <ul>
-    {{#each items}}
-      {{#if current}}
-        <li><strong>{{name}}</strong></li>
-      {{^}}
-        <li><a href="{{url}}">{{name}}</a></li>
-      {{/if}}
-    {{/each}}
+    <{{#each items}}>
+      <{{#if current}}>
+        <li><strong><{{name}}></strong></li>
+      <{{^}}>
+        <li><a href="<{{url}}>"><{{name}}></a></li>
+      <{{/if}}>
+    <{{/each}}>
   </ul>
-{{^}}
+<{{^}}>
   <p>The list is empty.</p>
-{{/if}}
+<{{/if}}>
